# alchemy-workshop

./: .env.example  .gitignore  Makefile  README.md  docker-compose-local.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: common.py  config.py  csv_loader.py  db.py  main.py
app/cli/: common.py  console.py
app/cli/commands/: __init__.py  schema.py  users.py
app/cli/common/: __init__.py  root.py  sub.py
app/commands/: schema.py
app/db/: core.py  types.py
app/db/models/: __init__.py  order.py  resume.py  user.py
app/db/tables/: __init__.py  resumes.py  users.py
app/enums/: order_status.py
app/models/: __init__.py  __main__.py  order.py  user.py
app/repos/: __init__.py  repo.py  users.py
app/tables/: __main__.py  users.py
data/: orders.csv  users.csv
