[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemy-workshop"
version = "0.0.1"
dependencies = [
    "sqlalchemy",
    "psycopg[binary]",
    "asyncpg",
    "greenlet",
    "typer",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = ["isort", "black"]

[project.scripts]
# database manager -> dbm
dbm = "app.main:main"

[tool.setuptools]
packages = ["app", "data"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
