[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemy-workshop"
version = "0.0.1"
dependencies = [
    "sqlalchemy",
    "psycopg[binary]",
    "asyncpg",
    "greenlet",
    "typer",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "docformatter",
    "pyright",
    "flake8",
    "flake8-pyproject",
    "autoflake",
    "bandit",
]

[project.scripts]
# database manager -> dbm
dbm = "app.main:app"

[tool.setuptools]
packages = ["app", "data"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.docformatter]
in-place = true
recursive = true
black = true
blank = true

[tool.flake8]
max-line-length = 88
max-complexity = 8
ignore = ["E203", "F401", "E701"]

[tool.autoflake]
recursive = true
remove-all-unused-imports = true
ignore-init-module-imports = true
