[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "alchemy-workshop"
version = "0.1.0"
description = "Project showcasing the use of SQLAlchemy."
authors = ["Vladyslav Haiduk <the.vladhaiduk@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.scripts]
dbm = "app.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.12.3" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
psycopg = { extras = ["binary"], version = "^3.2.1" }
asyncpg = "^0.29.0"
pydantic = { extras = ["email"], version = "^2.8.2" }
pydantic-settings = "^2.3.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pyright = "^1.1.370"

[tool.ruff]
target-version = "py311"
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D1", "D203", "D213", "ISC001", "PLR0913", "PTH123", "UP007"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
